Working but needs refactoring to let comps fetch

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,52 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
+
+body * {
+  margin: 0;
+  font-family: Roboto;
+}
+
+h1 {
+  padding: 24px 0 24px 0;
+}
+
+.states,
+.countries,
+.cities {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1px;
+}
+
+@media (min-width : 960px) {
+  .states,
+  .countries,
+  .cities {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.countries div {
+  color: white;
+  background-color: lightslategray;
+  padding: 10px;
+}
+
+.states div {
+  color: white;
+  background-color: slategray;
+  padding: 10px;
+}
+
+.cities div {
+  color: white;
+  background-color: darkslategray;
+  padding: 10px;
+}
+
+.city {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.city h2 {
+  margin-bottom: 42px;
 }
